# Forge

./: Dockerfile  README.md  config.env  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: pm-to-dev-workflow.json  sample-requirements.json
mcp_forge/: __init__.py  artifact_manager.py  cli.py  config.py  llm_router.py  main.py  schema_registry.py  server.py  ui.py  workflow_engine.py
mcp_forge.egg-info/: SOURCES.txt  requires.txt  top_level.txt
schemas/: dev-tasks-1.0.0.json  requirements-1.0.0.json  technical-impl-1.0.0.json
templates/: README.dev.md  README.pm.md  README.tpm.md
tests/unit/: test_cli.py  test_llm_router.py  test_schema_registry.py  test_server.py  test_workflow_engine.py
